--- a/www/main.css
+++ b/www/main.css
@@ -1,10 +1,9 @@
 p.box {
-  /*color: teal;*/
   height: 15vh;
   padding-top: 15vh;
   text-align: center;
-  /*outline: 1px red solid;*/
   outline: 1px grey solid;
+  margin: 1vh;
 }
 
 p.player_one {
@@ -12,7 +11,16 @@ p.player_one {
 }
 
 p.player_two {
-  background-image: radial-gradient(rgba(222, 222, 222, 0), rgba(255, 33, 105, 0.53) 96%);
+  background-image: radial-gradient(rgba(222, 222, 222, 0), rgba(255, 0, 0, 0.53) 96%);
+}
+
+p.player_turn {
+  outline: none;
+  height: 12vh;
+  padding-top: 9vh;
+  font-size: 170%;
+  /*text-shadow: 1px 1px 1px #000;*/
+  font-weight: bold;
 }
 
 p.hide {
