--- a/www/main.css
+++ b/www/main.css
@@ -55,3 +55,9 @@ div.radio-parent {
 p.player-label {
   margin: 0.2em;
 }
+
+div.progress-bar {
+  background: teal;
+  width: 0%;
+  height: 1em;
+}
